2010-07-13  Andreia Gaita  <avidigal@novell.com>

	Put all types inside a Moonlight namespace to avoid conflicts
	with external libraries

2010-07-12  Alan McGovern  <amcgovern@novell.com>

	* plugin.h:
	* plugin.cpp: Nuke
	  Helper.ReportException/PluginInstance::ReportException.
	  They're only used in debug builds and they cause DRTs to
	  fail. As they don't really have much of a use anymore,
	  remove them. Fixes drt 357.

2010-07-07  Sebastien Pouliot  <sebastien@ximian.com>

	* plugin.cpp|h:
	* plugin-class.cpp:
	* plugin-class.h.in:
		Add support for EnableNavigation

2010-06-29  Mario Carrion  <mcarrion@novell.com>

	* Makefile.am:
	* plugin-accessibility-bridge.cpp:
	* plugin-accessibility-bridge.h: Port A11yHelper to C++, load the
	atk-bridge, fully support new NPPVpluginNativeAccessibilityAtkPlugId
	specification.

	* moz-sdk/npapi.h:
	* plugin.cpp:
	* plugin.h: Add support for retrieving accessibles via
	NPP_GetValue(NPPVpluginNativeAccessibilityAtkPlugId).

	(Reworked patch r156659)

	r: toshok

2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-accessibility.cpp: Include config.h.

2010-06-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.cpp: chrome doesn't set the return value for calls to
	NPN_Invoke and friends if the js doesn't return a value, so zero-initialize
	it so that we don't access random memory afterwards.

2010-06-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: Add a missing Deployment::SetCurrent.

2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: SourceStopped: Don't do anything if we're shutting down.

2010-06-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* npstream-request.cpp: Abort: if we still have the stream after calling
	NPN_DestroyStream, it means we're using a buggy browser (firefox <3.7), so
	just call our own DestroyStream ourselves.

2010-06-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>
